= Rake Changelog

== Pre-Version 0.9.x

* Rake::GemPackageTask is deprecated.  Use Gem::PackageTask (require
  'rubygems/package_task')

* Rake now outputs various messages to $stderr instead of $stdout.

* Rake no longer emits warnings for Config.  Patch by Santiago Pastorino.

* Removed Rake's DSL methods from the top level scope.  If you need to
  call 'task :xzy' in your code, include Rake::DSL into your class, or
  put the code in a Rake::DSL.environment do ... end block.

* Allow single line comments immediately prior to a task to be used in
  place of +desc+.

* Split rake.rb into individual files.

* Support for the --where (-W) flag for showing where a task is defined.

* Fixed quoting in test task.
  (http://onestepback.org/redmine/issues/show/44,
  http://www.pivotaltracker.com/story/show/1223138)

* Fixed the silent option parsing problem.
  (http://onestepback.org/redmine/issues/show/47)

* Fixed :verbose=>false flag on sh and ruby commands.

* Rake command line options may be given by default in a RAKEOPT
  environment variable.

* Errors in Rake will now display the task invocation chain in effect
  at the time of the error.

* Accepted change by warnickr to not expand test patterns in shell
  (allowing more files in the test suite).

* Fixed that file tasks did not perform prereq lookups in scope
  (Redmine #57).

== Version 0.8.7

* Fixed EXEEXT for JRuby on windows.

== Version 0.8.6

* Minor fixes to the RDoc generation (removed dependency on darkfish
  and removed inline source option).

== PreVersion 0.8.6

* Now allow # comments to comment a task definition.

== Version 0.8.5

* Better support for the system command on Windows.

== Version 0.8.4

* Preserve case when locating rakefiles (patch from James
  M. Lawrence/quix)

* Better support for windows paths in the test task (patch from Simon
  Chiang/bahuvrihi)

* Windows system dir search order is now: HOME, HOMEDRIVE + HOMEPATH,
  APPDATA, USERPROFILE (patch from Luis Lavena)
